<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#EBE5C2"
             tools:context=".fragments.RegisterFragment">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="110dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="110dp"
                        android:background="@drawable/bg_blue"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                            android:layout_width="119dp"
                            android:layout_height="93dp"
                            android:src="@mipmap/logo"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="40sp"
                            android:textStyle="bold"
                            android:layout_marginStart="80dp"
                            android:textColor="#2D336B"
                            android:text="Events \n      Ismagi"/>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_white"
                android:orientation="vertical"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="20dp">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_account"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:layout_marginHorizontal="20dp"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/nom"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="20dp">
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/noma"
                        android:hint="@string/hint_name"
                        android:inputType="textPersonName"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/email"
                    android:layout_marginTop="15dp"
                    android:layout_marginHorizontal="20dp">
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/registerEmail"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/password_toggle"
                    android:layout_marginTop="25dp"
                    android:layout_marginHorizontal="20dp"
                    app:passwordToggleEnabled="true">
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/registerPassword"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                    android:id="@+id/btnConnexion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_register"
                    android:textSize="25sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="10dp"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="40dp"
                    android:layout_height="wrap_content">

                <View android:layout_width="wrap_content"
                      android:layout_height="1dp"
                      android:layout_marginStart="25dp"
                      android:layout_weight="1"
                      android:background="#707070"
                      android:layout_gravity="center_vertical"/>

                <Button
                        android:id="@+id/tologinrediction"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Connexion"
                        android:layout_marginEnd="15dp"
                        android:layout_marginStart="15dp"
                        android:textSize="25sp"
                        android:textStyle="bold"/>

                <View android:layout_width="wrap_content"
                      android:layout_height="1dp"
                      android:layout_weight="1"
                      android:background="#707070"
                      android:layout_marginEnd="25dp"
                      android:layout_gravity="center_vertical"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="290dp"
                    android:src="@mipmap/bottom_right"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>